apps/demo/overlay/main/demo-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    deployment.environment: production
spec:
  replicas: 1
  template:
    metadata:
      labels:
        deployment.environment: production
    spec:
      containers:
        - name: demo
          image: jerryworld/demo-main:bf11a4df7bc1204e31b839395c3dc4036253c930
          ports:
            - containerPort: 9000
      imagePullSecrets:
        - name: docker-hub-secret
