apps/demo/overlay/main/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    deployment.environment: production
spec:
  replicas: 1
  template:
    metadata:
      labels:
        deployment.environment: production
    spec:
      containers:
        - name: demo
          image: jerryworld/demo:ae0ab6947172a85192fdfc395023a513b7a28ab44de4785bb14ea1f687877c737a369b5d
          ports:
            - containerPort: 9000
      imagePullSecrets:
        - name: docker-hub-secret
