apps/demo/overlay/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: jerry.world
      http:
        paths:
          - path: /demo
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 80
